--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pubsub-js": "^1.8.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "use-debounce": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
