--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "react-spinners": "^0.8.1",
     "use-debounce": "^3.4.0"
   },
   "scripts": {
